--- a/DockerBuild/package.json
+++ b/DockerBuild/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "node-fetch": "^2.1.2",
     "underscore": "^1.9.1"
   }
