--- a/DockerBuild/package.json
+++ b/DockerBuild/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/CitiLogics/grafana-json-kapacitor-shim",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
