--- a/DockerBuild/package.json
+++ b/DockerBuild/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "express": "^4.16.3",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
