--- a/DockerBuild/package.json
+++ b/DockerBuild/package.json
@@ -17,6 +17,8 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "node-fetch": "^2.1.2",
+    "stream-chain": "^2.0.3",
+    "stream-json": "^1.1.1",
     "underscore": "^1.9.1"
   }
 }
